creating vocabulary lists for each class

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "df[df['intent'] == 9]['tokens'].apply(lambda x: add_9(x))\n",
     "\n",
-    "#variable declaration stemming and lemmatization \n",
+    "#variable declaration for stemming and lemmatization \n",
     "ps = PorterStemmer()\n",
     "lm = WordNetLemmatizer()\n",
     "\n",
