vocabulary list updates

--- a/dataCleaning.ipynb
+++ b/dataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -14,22 +14,12 @@
     "df = pd.read_csv('./train_data.csv')\n",
     "labels = df['intent'].unique()"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /Users/kabirbatra/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "source": [
     "#labeling integer values to classes\n",
     "df['intent'].replace({'init-price':0, 'insist':1, 'counter-price':2, 'agree':3,\n",
@@ -40,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "source": [
     "#Creating vocabulary list for each class \n",
     "voc_list0 = []\n",
@@ -203,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "voc_list0.reset_index(inplace=True)\n",
     "voc_list1.reset_index(inplace=True)\n",
@@ -216,6 +206,7 @@
     "voc_list8.reset_index(inplace=True)\n",
     "voc_list9.reset_index(inplace=True)\n",
     "\n",
+    "voc_list0.head(100)\n",
     "#Exporting DataFrames to csv files\n",
     "voc_list0[['words','count']].to_csv('vocabulary_list0.csv', header=False, index=False)\n",
     "voc_list1[['words','count']].to_csv('vocabulary_list1.csv', header=False, index=False)\n",
