mapped intents with biddings

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -66,10 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "source": [
-    "#loading previous intents from ongoing coversation\n",
-    "\n",
     "def priceExtraction(value):\n",
     "    #searching for price-value or price-range in user input text string\n",
     "    price = list(map(int, re.findall('(\\$\\d+)(\\-*\\d*)', value)))\n",
@@ -83,8 +81,15 @@
     "    intent_timeline = np.load('intent_timeline.npy')\n",
     "    new_timeline = np.append(intent_timeline, [data], axis=0)\n",
     "    np.save('intent_timeline.npy', new_timeline)\n",
-    "    print('current intents saved in intent_timeline', new_timeline)\n",
-    "\n",
+    "    print('current intents saved in intent_timeline', new_timeline)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "source": [
     "def Intentagree(buyers_bid):\n",
     "    #once the deal is done, reseting previous intent of ongoing conversation\n",
     "    intent_timeline = np.array([['buyers_intent','buyers_bid','bots_intent','bots_bid']])\n",
@@ -103,8 +108,15 @@
     "def Intentcounterprice(buyers_bid):\n",
     "    bots_bid = 0 #yet to perform price prediction\n",
     "    saveIntentIntoTimeline(('counter-price',buyers_bid),('counter-price',bots_bid))\n",
-    "    return 'counter-price'\n",
-    "\n",
+    "    return 'counter-price'    "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "def decisionEngine(text):\n",
     "    #function call for intentClassification from file ic_model.py\n",
     "    buyers_intent = ic_model.predict_intent(text)\n",
@@ -116,9 +128,7 @@
     "    buyers_bid = priceExtraction(text)\n",
     "\n",
     "    #calling distint functions according to the buyers_intent\n",
-    "    return eval(\"Intent\" + str(buyers_intent) + \"({})\".format(buyers_bid))\n",
-    "\n",
-    "    "
+    "    return eval(\"Intent\" + str(buyers_intent) + \"({})\".format(buyers_bid))"
    ],
    "outputs": [],
    "metadata": {}
