--- a/algorithm1.ipynb
+++ b/algorithm1.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import re\n",
     "import ic_model \n",
+    "import pp_model\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
@@ -13,31 +16,35 @@
     "# import nltk\n",
     "# nltk.download('punkt')\n",
     "pd.set_option('display.max_colwidth', 1000)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration default\n",
+      "Reusing dataset craigslist_bargains (/Users/kabirbatra/.cache/huggingface/datasets/craigslist_bargains/default/1.1.0/9e4e64d13ea36e435a8f56f9305d3c771115909b7fe83269bf7cd8dd40302338)\n"
+     ]
+    }
+   ],
    "source": [
     "test_ds = load_dataset('craigslist_bargains', split= 'validation')\n",
     "test_ds = pd.DataFrame(test_ds)\n",
     "test_ds.rename(columns={'utterance':'bargain_convo','dialogue_acts':'intent'}, inplace=True)\n",
     "test_ds = test_ds.loc[6,:]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "source": [
-    "test_ds"
-   ],
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "agent_info                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 {'Bottomline': ['None', 'None'], 'Role': ['buyer', 'seller'], 'Target': [38.0, 50.0]}\n",
@@ -48,25 +55,20 @@
        "Name: 6, dtype: object"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 200
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
    "source": [
-    "# intent_timeline = np.array([['buyers_intent','buyers_bid','bots_intent','bots_bid']])\n",
-    "# np.save('intent_timeline.npy', intent_timeline)"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "test_ds"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def priceExtraction(value):\n",
     "    #searching for price-value or price-range in user input text string\n",
@@ -76,94 +78,122 @@
     "    else:\n",
     "        return 0\n",
     "\n",
+    "def getBuyerIntent():\n",
+    "    intent_timeline = np.load('intent_timeline.npy')\n",
+    "    buyers_intent = [x[0] for x in intent_timeline]\n",
+    "    return buyers_intent\n",
+    "\n",
     "def saveIntentIntoTimeline(data):\n",
     "    #saving current buyer's and bot's intent and bids in file intent_timeline.npy\n",
     "    intent_timeline = np.load('intent_timeline.npy')\n",
     "    new_timeline = np.append(intent_timeline, [data], axis=0)\n",
     "    np.save('intent_timeline.npy', new_timeline)\n",
     "    print('current intents saved in intent_timeline', new_timeline)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "def Intentagree(buyers_bid):\n",
-    "    #once the deal is done, reseting previous intent of ongoing conversation\n",
-    "    intent_timeline = np.array([['buyers_intent','buyers_bid','bots_intent','bots_bid']])\n",
-    "    np.save('intent_timeline.npy', intent_timeline)\n",
+    "def Intentagree(buyer_bid):\n",
+    "    #once the deal is done, reseting previous intents of ongoing conversation\n",
+    "    reset_timeline()\n",
     "    return 'agree'\n",
     "\n",
-    "def Intentintro(buyers_bid):\n",
-    "    saveIntentIntoTimeline(['intro',buyers_bid,'intro',buyers_bid])\n",
+    "def Intentintro(buyer_bid):\n",
+    "    saveIntentIntoTimeline(['intro',buyer_bid,'intro',buyer_bid])\n",
     "    return 'intro'\n",
     "\n",
-    "def Intentinitprice(buyers_bid):\n",
-    "    bots_bid = 0 #yet to perform price prediction\n",
-    "    saveIntentIntoTimeline(('init-price',buyers_bid),('intro',bots_bid))\n",
+    "def Intentinitprice(buyer_bid):\n",
+    "    bod_bid = 0 #yet to perform price prediction\n",
+    "    saveIntentIntoTimeline(['init-price',buyer_bid,'init-price',bod_bid])\n",
     "    return 'init-price'\n",
     "\n",
-    "def Intentcounterprice(buyers_bid):\n",
-    "    bots_bid = 0 #yet to perform price prediction\n",
-    "    saveIntentIntoTimeline(('counter-price',buyers_bid),('counter-price',bots_bid))\n",
+    "def Intentcounterprice(buyer_bid):\n",
+    "    discount = pp_model.max_discount_predict(getBuyerIntent())\n",
+    "    bod_bid = \n",
+    "    saveIntentIntoTimeline(['counter-price',buyer_bid,'counter-price',bod_bid])\n",
     "    return 'counter-price'    "
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "def reset_timeline():\n",
+    "    intent_timeline = np.array([['buyer_intent','buyer_bid','bot_intent','bot_bid']])\n",
+    "    np.save('intent_timeline.npy', intent_timeline)\n",
+    "\n",
     "def decisionEngine(text):\n",
     "    #function call for intentClassification from file ic_model.py\n",
-    "    buyers_intent = ic_model.predict_intent(text)\n",
-    "    buyers_intent = 'counterprice' if buyers_intent == 'counter-price' else buyers_intent\n",
-    "    buyers_intent = 'initprice' if buyers_intent == 'init-price' else buyers_intent\n",
+    "    buyer_intent = ic_model.predict_intent(text)\n",
+    "    buyer_intent = 'counterprice' if buyer_intent == 'counter-price' else buyer_intent\n",
+    "    buyer_intent = 'initprice' if buyer_intent == 'init-price' else buyer_intent\n",
     "\n",
     "    #fetching discret price-range or buyers-bid from the user-input text i.e (rangeMin,rangeMax) or (singleValue,0) \n",
     "    #e.g.(100,200), (100,0) \n",
     "    buyers_bid = priceExtraction(text)\n",
-    "\n",
-    "    #calling distint functions according to the buyers_intent\n",
-    "    return eval(\"Intent\" + str(buyers_intent) + \"({})\".format(buyers_bid))"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "    \n",
+    "    #calling distint functions according to the buyer_intent\n",
+    "    return eval(\"Intent\" + str(buyer_intent) + \"({})\".format(buyers_bid))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3747]\n",
+      "intro\n",
+      "current intents saved in intent_timeline [['buyers_intent' 'buyers_bid' 'bots_intent' 'bots_bid']\n",
+      " ['intro' '0' 'intro' '0']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'intro'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "decisionEngine(\"hey, how you doing?\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "30326061de640313b16f1c2b9b63d2a15630a3c5e7cebec4d516c4b3adf1e1c7"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.8",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "30326061de640313b16f1c2b9b63d2a15630a3c5e7cebec4d516c4b3adf1e1c7"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
