demo cosine similarity

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using custom data configuration default\n",
-      "Reusing dataset craigslist_bargains (/Users/kabirbatra/.cache/huggingface/datasets/craigslist_bargains/default/1.1.0/9e4e64d13ea36e435a8f56f9305d3c771115909b7fe83269bf7cd8dd40302338)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import algorithm\n",
     "import numpy as np\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upperLimit: 500 lowerLimit: 470\n"
+      "upperLimit: 500 lowerLimit: 430\n"
      ]
     }
    ],
@@ -72,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +82,6 @@
     "\n",
     "inquiry = \"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.', 'Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up and haul.\"\n",
     "\n",
-    "counterprice = [\n",
-    "\"My boss would fire me if I went that low.. how about {}.\",\n",
-    "\"Umm no. let's settle on {}.\", \n",
-    "\"Best I can do is {}.\",\n",
-    "\"Your offer sounds low, I've got something better, let's do {}.\",\n",
-    "\"Let's end it at {}, it's best for both of us.\",\n",
-    "\"Let's meet somewhere in the middle at {}.\",\n",
-    "\"You're a tough one, but so am I.. {} is my offer.\",\n",
-    "\"Ahhh I've had a rough day, let's make it quick {} sounds awesome.\",\n",
-    "\"I've got a family to take care of let's do {}.\",\n",
-    "\"I've an offer no one would have given you {}.\" \n",
-    "]\n",
-    "\n",
     "agree = [\n",
     "\"{} sounds good, Glad you made the right decision.\",\n",
     "\"{} sounds good, I've got another offer, a virtual hand shake.\",\n",
@@ -115,6 +93,19 @@
     "\"{} sounds good, Finally i can take some rest!\",\n",
     "\"{} sounds good, Trust me you got this at the best possible price.\",\n",
     "\"{} sounds good, We've got a deal, some of my favourite words.\"\n",
+    "]\n",
+    "\n",
+    "counterprice = [\n",
+    "\"My boss would fire me if I went that low.. how about {}.\",\n",
+    "\"Umm no. let's settle on {}.\", \n",
+    "\"Best I can do is {}.\",\n",
+    "\"Your offer sounds low, I've got something better, let's do {}.\",\n",
+    "\"Let's end it at {}, it's best for both of us.\",\n",
+    "\"Let's meet somewhere in the middle at {}.\",\n",
+    "\"You're a tough one, but so am I.. {} is my offer.\",\n",
+    "\"Ahhh I've had a rough day, let's make it quick {} sounds awesome.\",\n",
+    "\"I've got a family to take care of let's do {}.\",\n",
+    "\"I've an offer no one would have given you {}.\" \n",
     "]\n",
     "\n",
     "deal = [\n",
@@ -159,35 +150,32 @@
     "        return nodeal[random.randrange(0,len(intro))]\n",
     "    elif intent == 'unknown':\n",
     "        return \"Sorry didn't get you there, can you please rephrase.\"\n",
-    "        "
+    "#no deal, so no deal then, no deal from my side, I'm not sure about this, No this is too much, can't do it   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1579]\n",
-      "agree\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'model' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-a4b070a5d4df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresponse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"give me the details\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-23-ec4d447253e2>\u001b[0m in \u001b[0;36mresponse\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0mintent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecisionEngine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mintent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'intro'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mintro\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mintro\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Applications/Github/Negotiation-Bot/algorithm.py\u001b[0m in \u001b[0;36mdecisionEngine\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdecisionEngine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0;31m#function call for intentClassification from file ic_model.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m     \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mic_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_intent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m     \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'counterprice'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'counter-price'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mbuyer_intent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'initprice'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'init-price'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mbuyer_intent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Applications/Github/Negotiation-Bot/intentClassification/ic_model.py\u001b[0m in \u001b[0;36mpredict_intent\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpredict_intent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m     \u001b[0mpreprocessed_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext_preprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m     \u001b[0mic_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_model_and_vectorizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[0mvectorized_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpreprocessed_text\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Applications/Github/Negotiation-Bot/intentClassification/ic_model.py\u001b[0m in \u001b[0;36mload_model_and_vectorizer\u001b[0;34m()\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMODEL_FILENAME\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0mvect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVECT_FILENAME\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dsjvinjud'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'model' referenced before assignment"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'470.00000000000006 sounds good, Good negotiating, Celebrate your victory.'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "response(\"deal\")"
+    "response(\"give me the details\")"
    ]
   }
  ],
