added sentiment analysis dataset

--- a/sentenceSimilarity.ipynb
+++ b/sentenceSimilarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,30 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "description = [\"It's a 2014 model, too old for me\",\n",
-    "\"Hi, I'm selling my 2014 Toyota Prius.\",\n",
-    "\"It has only 65k miles. \",\n",
-    "\"It has Backup camera, Bluetooth, CD, AUX, Keyless Go.\",\n",
-    "\"There was no engine or transmission damage. \",\n",
-    "\"Very clean inside\",\n",
-    "\"never smoke.\"\n",
-    "\"Well maintained.\",\n",
-    "\"Oil change every 5k miles with synthetic Toyota Original Oil. \",\n",
-    "\"Registered until February 2019. Title on hands. \",\n",
-    "\"It lost its clean title status due to rear bumper hit.\", \n",
-    "\"Small scratch on the right side. \",\n",
-    "\"I'm the second owner and had no any problem with it. \",\n",
-    "\"The car is great, 50+ MPG. \",\n",
-    "\"Will run 100k miles more easily. Call me or better text at any time\"]"
+    "# description = [\"It's a 2014 model, too old for me\",\n",
+    "# \"Hi, I'm selling my 2014 Toyota Prius.\",\n",
+    "# \"It has only 65k miles. \",\n",
+    "# \"It has Backup camera, Bluetooth, CD, AUX, Keyless Go.\",\n",
+    "# \"There was no engine or transmission damage. \",\n",
+    "# \"Very clean inside\",\n",
+    "# \"never smoke.\"\n",
+    "# \"Well maintained.\",\n",
+    "# \"Oil change every 5k miles with synthetic Toyota Original Oil. \",\n",
+    "# \"Registered until February 2019. Title on hands. \",\n",
+    "# \"It lost its clean title status due to rear bumper hit.\", \n",
+    "# \"Small scratch on the right side. \",\n",
+    "# \"I'm the second owner and had no any problem with it. \",\n",
+    "# \"The car is great, 50+ MPG. \",\n",
+    "# \"Will run 100k miles more easily. Call me or better text at any time\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "\n",
     "def text_tokenize(text):\n",
     "    text = word_tokenize(text)\n",
-    "    text = [word for word in text if word not in stop_words]\n",
+    "    text = {word for word in text if word not in stop_words}\n",
     "    return text\n",
     "\n",
     "def text_preprocess(text):\n",
@@ -86,15 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# X = input(\"Enter first string: \").lower()\n",
     "# Y = input(\"Enter second string: \").lower()\n",
-    "input =\"It's only gone 65k miles\"\n",
-    "description =\"Hi, I'm selling my 2014 Toyota Prius. It has only 65k miles. It has Backup camera, Bluetooth, CD, AUX, Keyless Go. There was no engine or transmission damage. Very clean inside, never smoke. Well maintained. Oil change every 5k miles with synthetic Toyota Original Oil. Registered until February 2019. Title on hands. It lost its clean title status due to rear bumper hit. Small scratch on the right side. I'm the second owner and had no any problem with it. The car is great, 50+ MPG. Will run 100k miles more easily. Call me or better text at any time\"\n",
-    "\n",
     "def cosineSimilarity(input, description):\n",
     "\tinput, description = remove_all_punct(input), remove_all_punct(description)\n",
     "\tinput, description = text_stemmer(input), text_stemmer(description)\n",
@@ -120,82 +117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'union'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-80-d4ebce4c22e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# print(jaccard_score([sentences_vec[0]], [sentences_vec[1]]))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# print(cosine_similarity([sentences_vec[0]], [sentences_vec[1]]))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mcosineSimilarity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdescription\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-79-905fc69930c2>\u001b[0m in \u001b[0;36mcosineSimilarity\u001b[0;34m(input, description)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0ml2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;31m# form a set containing keywords of both strings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mrvector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrvector\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0ml1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# create a vector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'union'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ic_model.text_preprocess(\"No. That is too much for a 2014 Toyota prius\")\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.metrics import jaccard_score\n",
-    "# print(jaccard_score([sentences_vec[0]], [sentences_vec[1]]))\n",
-    "# print(cosine_similarity([sentences_vec[0]], [sentences_vec[1]]))\n",
-    "# cosineSimilarity(input, description)"
+    "input =\"It has Backup camera\".lower()\n",
+    "description =\"Hi, I'm selling my 2014 Toyota Prius. It has only 65k miles. It has Backup camera, Bluetooth, CD, AUX, Keyless Go. There was no engine or transmission damage. Very clean inside, never smoke. Well maintained. Oil change every 5k miles with synthetic Toyota Original Oil. Registered until February 2019. Title on hands. It lost its clean title status due to rear bumper hit. Small scratch on the right side. I'm the second owner and had no any problem with it. The car is great, 50+ MPG. Will run 100k miles more easily. Call me or better text at any time\".lower()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'love', 'horror', 'I', 'movies'} {'Lights', 'movie', 'horror'}\n",
-      "[0, 0, 1, 1, 1, 1] [1, 1, 0, 0, 1, 0]\n",
-      "similarity:  0.2886751345948129\n"
+      "similarity:  0.21650635094610968\n"
      ]
     }
    ],
    "source": [
-    "# X = input(\"Enter first string: \").lower()\n",
-    "# Y = input(\"Enter second string: \").lower()\n",
-    "X =\"I love horror movies\"\n",
-    "Y =\"Lights out is a horror movie\"\n",
-    "  \n",
-    "# tokenization\n",
-    "X_list = word_tokenize(X) \n",
-    "Y_list = word_tokenize(Y)\n",
-    "  \n",
-    "# sw contains the list of stopwords\n",
-    "sw = stopwords.words('english') \n",
-    "l1 =[];l2 =[]\n",
-    "  \n",
-    "# remove stop words from the string\n",
-    "X_set = {w for w in X_list if not w in sw} \n",
-    "Y_set = {w for w in Y_list if not w in sw}\n",
-    "\n",
-    "print(X_set, Y_set)\n",
-    "  \n",
-    "# form a set containing keywords of both strings \n",
-    "rvector = X_set.union(Y_set) \n",
-    "for w in rvector:\n",
-    "    if w in X_set: l1.append(1) # create a vector\n",
-    "    else: l1.append(0)\n",
-    "    if w in Y_set: l2.append(1)\n",
-    "    else: l2.append(0)\n",
-    "c = 0\n",
-    "\n",
-    "print(l1, l2)\n",
-    "  \n",
-    "# cosine formula \n",
-    "for i in range(len(rvector)):\n",
-    "        c+= l1[i]*l2[i]\n",
-    "cosine = c / float((sum(l1)*sum(l2))**0.5)\n",
-    "print(\"similarity: \", cosine)"
+    "cosineSimilarity(input, description)"
    ]
   }
  ],
