--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration default\n",
+      "Reusing dataset craigslist_bargains (/Users/kabirbatra/.cache/huggingface/datasets/craigslist_bargains/default/1.1.0/9e4e64d13ea36e435a8f56f9305d3c771115909b7fe83269bf7cd8dd40302338)\n"
+     ]
+    }
+   ],
    "source": [
     "import algorithm\n",
     "import numpy as np\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +72,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "botReply = {\n",
+    "    \"intro\": [\n",
+    "                \"Hey There fellow Negotiator, let's get Negotiating.\", \n",
+    "                \"!£%₹¥ $25...beep boop OH HEY THERE!..sorry.. how can i help?\",\n",
+    "                \"Good Day! Getting an itch to spend some bucks today?\",\n",
+    "                \"Hola, Its the almighty negotiation bot, let's get Negotiating.\",\n",
+    "                \"Hey! Let me help you get what you want.. or can I?\",\n",
+    "                \"It's a tough bargain being a negotiation bot, anyways what can i do for you today?\",\n",
+    "                \"Hi There, yes im the negotiation bot they've been talking about, how can i help?\",\n",
+    "                \"Namaste! hope you've been doing great!\",\n",
+    "                \"Bonjour! pleasure meeting you today, how can i help?\",\n",
+    "                \"Hello, hope we both settle on a good price today.\"\n",
+    "            ],\n",
+    "    \"inquiry\": [\"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.', 'Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\"],\n",
+    "    \"agree\": [\n",
+    "                \"{} sounds good, Glad you made the right decision.\",\n",
+    "                \"{} sounds good, I've got another offer, a virtual hand shake.\",\n",
+    "                \"{} sounds good, Pleasure doing business with you!\",\n",
+    "                \"{} sounds good, phew, That was an intimidating negotiation. Cheers!\",\n",
+    "                \"{} sounds good, Glad we could reach to a consensus, enjoy your product.\",\n",
+    "                \"{} sounds good, You made the right call, you wont regret.\",\n",
+    "                \"{} sounds good, Good negotiating, Celebrate your victory.\",\n",
+    "                \"{} sounds good, Finally i can take some rest!\",\n",
+    "                \"{} sounds good, Trust me you got this at the best possible price.\",\n",
+    "                \"{} sounds good, We've got a deal, some of my favourite words.\"\n",
+    "            ],\n",
+    "    \"counterprice\": [\n",
+    "                \"My boss would fire me if I went that low.. how about {}.\",\n",
+    "                \"Ummmm. let's settle on {}.\", \n",
+    "                \"Best I can do is {}.\",\n",
+    "                \"Your offer sounds low, I've got something better, let's do {}.\",\n",
+    "                \"Let's end it at {}, it's best for both of us.\",\n",
+    "                \"Let's meet somewhere in the middle at {}.\",\n",
+    "                \"You're a tough one, but so am I.. {} is my offer.\",\n",
+    "                \"Ahhh I've had a rough day, let's make it quick {} sounds awesome.\",\n",
+    "                \"I've got a family to take care of let's do {}.\",\n",
+    "                \"I've an offer no one would have given you {}.\" \n",
+    "            ],\n",
+    "    \"deal\": [\n",
+    "                \"Glad you made the right decision.\",\n",
+    "                \"I've got another offer, a virtual hand shake.\",\n",
+    "                \"Pleasure doing business with you!\",\n",
+    "                \"phew, That was an intimidating negotiation. Cheers!\",\n",
+    "                \"Glad we could reach to a consensus, enjoy your product.\",\n",
+    "                \"You made the right call, you wont regret.\",\n",
+    "                \"Good negotiating, Celebrate your victory.\",\n",
+    "                \"Finally i can take some rest!\",\n",
+    "                \"Trust me you got this at the best possible price.\",\n",
+    "                \"We've got a deal, some of my favourite words.\"\n",
+    "            ],\n",
+    "    \"nodeal\": [ \n",
+    "                \"Sorry we couldn't reach to an agreement.\",\n",
+    "                \"Really wished we could reach to a consensus, maybe next time!\",\n",
+    "                \"It's alright, if not today maybe tomorrow.\",\n",
+    "                \"We both desire differently, sorry the deal couldn't be made.\",\n",
+    "                \"We both lie on two extreme poles, but its okay.\",\n",
+    "                \"We clearly lie on two different pages, sorry the deal can't be made.\",\n",
+    "                \"No Deal! Good luck though.\",\n",
+    "                \"Thought i was gonna sell this, maybe i was wrong\", \n",
+    "                \"Maybe this product isn't destined for you.\",\n",
+    "                \"Offered the best price, really couldn't go any lower.\",\n",
+    "            ],\n",
+    "    \"unknown\": [\"Oops! Didn't get you there, will you please rephrase.\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,16 +152,16 @@
     "\"Hey There fellow Negotiator, let's get Negotiating.\", \n",
     "\"!£%₹¥ $25...beep boop OH HEY THERE!..sorry.. how can i help?\",\n",
     "\"Good Day! Getting an itch to spend some bucks today?\",\n",
-    "\"Hola, Its the almighty negotiation bot.\",\n",
+    "\"Hola, Its the almighty negotiation bot, let's get Negotiating.\",\n",
     "\"Hey! Let me help you get what you want.. or can I?\",\n",
     "\"It's a tough bargain being a negotiation bot, anyways what can i do for you today?\",\n",
     "\"Hi There, yes im the negotiation bot they've been talking about, how can i help?\",\n",
     "\"Namaste! hope you've been doing great!\",\n",
-    "\"Bonjour! pleasure meeting you today.\",\n",
+    "\"Bonjour! pleasure meeting you today, how can i help?\",\n",
     "\"Hello, hope we both settle on a good price today.\"\n",
     "]\n",
     "\n",
-    "inquiry = \"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.', 'Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up and haul.\"\n",
+    "inquiry = \"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.', 'Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\"\n",
     "\n",
     "agree = [\n",
     "\"{} sounds good, Glad you made the right decision.\",\n",
@@ -97,7 +178,7 @@
     "\n",
     "counterprice = [\n",
     "\"My boss would fire me if I went that low.. how about {}.\",\n",
-    "\"Umm no. let's settle on {}.\", \n",
+    "\"Ummmm. let's settle on {}.\", \n",
     "\"Best I can do is {}.\",\n",
     "\"Your offer sounds low, I've got something better, let's do {}.\",\n",
     "\"Let's end it at {}, it's best for both of us.\",\n",
@@ -134,48 +215,94 @@
     "\"Offered the best price, really couldn't go any lower.\",\n",
     "]\n",
     "\n",
-    "def response(text):\n",
+    "unknown = [\"Oops! Didn't get you there, will you please rephrase.\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def negoBotResponse(text):\n",
     "    intent, bid = algorithm.decisionEngine(text)\n",
-    "    if intent == 'intro':\n",
-    "        return intro[random.randrange(0,len(intro))]\n",
-    "    elif intent == 'counter-price' or intent == 'init-price':\n",
-    "        return counterprice[random.randrange(0,len(counterprice))].format(bid)\n",
-    "    elif intent == 'inquiry':\n",
-    "        return inquiry\n",
+    "    if intent == 'counter-price' or intent == 'init-price':\n",
+    "        return botReply['counterprice'][random.randrange(0,len(botReply['counterprice']))].format(bid)\n",
     "    elif intent == 'agree':\n",
-    "        return agree[random.randrange(0,len(intro))].format(bid)\n",
-    "    elif intent == 'deal':\n",
-    "        return deal[random.randrange(0,len(intro))]\n",
+    "        return botReply['agree'][random.randrange(0,len(botReply['agree']))].format(bid)\n",
     "    elif intent == 'disagree':\n",
-    "        return nodeal[random.randrange(0,len(intro))]\n",
-    "    elif intent == 'unknown':\n",
-    "        return \"Sorry didn't get you there, can you please rephrase.\"\n",
+    "        return botReply['nodeal'][random.randrange(0,len(botReply['nodeal']))].format(bid)\n",
+    "    else:\n",
+    "        return botReply[intent][random.randrange(0,len(botReply[intent]))]\n",
+    "\n",
+    "# def negoBotResponse(text):\n",
+    "#     intent, bid = algorithm.decisionEngine(text)\n",
+    "#     if intent == 'intro':\n",
+    "#         return intro[random.randrange(0,len(intro))]\n",
+    "#     elif intent == 'counter-price' or intent == 'init-price':\n",
+    "#         return counterprice[random.randrange(0,len(counterprice))].format(bid)\n",
+    "#     elif intent == 'inquiry':\n",
+    "#         return inquiry\n",
+    "#     elif intent == 'agree':\n",
+    "#         return agree[random.randrange(0,len(agree))].format(bid)\n",
+    "#     elif intent == 'deal':\n",
+    "#         return deal[random.randrange(0,len(deal))]\n",
+    "#     elif intent == 'disagree':\n",
+    "#         return nodeal[random.randrange(0,len(nodeal))]\n",
+    "#     elif intent == 'unknown':\n",
+    "#         return unknown[random.randrange(0,len(unknown))]\n",
+    "\n",
+    "convo = []\n",
+    "def printConvo():\n",
+    "    print(\"--------conversation-begins--------\")\n",
+    "    for x in convo:\n",
+    "        print(\"{}: {}\".format(x[0], x[1]))\n",
+    "        print(\" \")\n",
+    "\n",
+    "def negoBot(userInput):\n",
+    "    response = negoBotResponse(userInput)\n",
+    "    convo.append([\"You\", userInput])\n",
+    "    convo.append([\"Bot\", response])\n",
+    "    printConvo()\n",
+    "    # return response\n",
+    "\n",
+    "#Can you tell me the details? Nahh that's too much how about $450? No. I'm out\n",
     "#no deal, so no deal then, no deal from my side, I'm not sure about this, No this is too much, can't do it   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'model' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-a4b070a5d4df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresponse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"give me the details\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-23-ec4d447253e2>\u001b[0m in \u001b[0;36mresponse\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0mintent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecisionEngine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mintent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'intro'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mintro\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mintro\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/Github/Negotiation-Bot/algorithm.py\u001b[0m in \u001b[0;36mdecisionEngine\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdecisionEngine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0;31m#function call for intentClassification from file ic_model.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m     \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mic_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_intent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m     \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'counterprice'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'counter-price'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mbuyer_intent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'initprice'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mbuyer_intent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'init-price'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mbuyer_intent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/Github/Negotiation-Bot/intentClassification/ic_model.py\u001b[0m in \u001b[0;36mpredict_intent\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpredict_intent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m     \u001b[0mpreprocessed_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext_preprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m     \u001b[0mic_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_model_and_vectorizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[0mvectorized_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpreprocessed_text\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/Github/Negotiation-Bot/intentClassification/ic_model.py\u001b[0m in \u001b[0;36mload_model_and_vectorizer\u001b[0;34m()\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMODEL_FILENAME\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0mvect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVECT_FILENAME\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dsjvinjud'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'model' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current intent:  intro\n",
+      "buyer_timeline:\n",
+      "[['buyer_intent' 'buyer_bid']\n",
+      " ['intro' '0']]\n",
+      "--------conversation-begins--------\n",
+      "You: hey there\n",
+      " \n",
+      "Bot: Namaste! hope you've been doing great!\n",
+      " \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Namaste! hope you've been doing great!\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "response(\"give me the details\")"
+    "negoBot(\"hey there\")"
    ]
   }
  ],
